added new functions for search

--- a/apps/ux-films-finder/src/app/components/header/header.component.less
+++ b/apps/ux-films-finder/src/app/components/header/header.component.less
@@ -258,6 +258,7 @@
 
 .theme-dark {
   & .header {
+    box-shadow: 0.4em 0.4em 5px rgba(10, 10, 10, 0.5);
     background: @color-gray-1b;
 
     &__first-line,
