new triangles-genres genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -11,6 +11,7 @@
       <div class="genres-banner__slide _comedy keen-slider__slide">
         <div class="genres-banner__slide-link-genre _comedy">
           <div class="genres-banner__slide-link-genre-title">Комедии</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -19,6 +20,7 @@
       <div class="genres-banner__slide _horror keen-slider__slide">
         <div class="genres-banner__slide-link-genre _horror">
           <div class="genres-banner__slide-link-genre-title">Ужасы</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -27,6 +29,7 @@
       <div class="genres-banner__slide _action keen-slider__slide">
         <div class="genres-banner__slide-link-genre _action">
           <div class="genres-banner__slide-link-genre-title">Боевик</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -35,6 +38,7 @@
       <div class="genres-banner__slide _drama keen-slider__slide">
         <div class="genres-banner__slide-link-genre _drama">
           <div class="genres-banner__slide-link-genre-title">Драма</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -43,6 +47,7 @@
       <div class="genres-banner__slide _adventure keen-slider__slide">
         <div class="genres-banner__slide-link-genre _adventure">
           <div class="genres-banner__slide-link-genre-title">Приключение</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -51,6 +56,7 @@
       <div class="genres-banner__slide _fantasy keen-slider__slide">
         <div class="genres-banner__slide-link-genre _fantasy">
           <div class="genres-banner__slide-link-genre-title">Фэнтэзи</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -59,6 +65,7 @@
       <div class="genres-banner__slide _thriller keen-slider__slide">
         <div class="genres-banner__slide-link-genre _thriller">
           <div class="genres-banner__slide-link-genre-title">Триллер</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -67,6 +74,7 @@
       <div class="genres-banner__slide _romance keen-slider__slide">
         <div class="genres-banner__slide-link-genre _romance">
           <div class="genres-banner__slide-link-genre-title">Мелодрама</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
@@ -75,6 +83,7 @@
       <div class="genres-banner__slide _family keen-slider__slide">
         <div class="genres-banner__slide-link-genre _family">
           <div class="genres-banner__slide-link-genre-title">Семейный</div>
+          <div class="genres-banner__slide-link-genre-triangles"></div>
         </div>
       </div>
     </a>
