new genres-banner.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -5,7 +5,8 @@
   max-width: 1600px;
   color: @color-black-00;
   text-align: center;
-  margin: 0 150px;
+  margin: 0 auto;
+  //margin: 0 150px;
   &__main {
     font-weight: 400;
     font-size: 50px;
@@ -83,7 +84,7 @@
         color: @color-white-ff;
       }
       &-triangles {
-        width: 290px;
+        width: 600px;
         height: 86px;
         background: url('../../../assets/images/triangles-genres.svg') no-repeat;
       }
