--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.less
@@ -6,7 +6,7 @@
   color: @color-black-00;
   text-align: center;
   margin: 0 auto;
-  //margin: 0 150px;
+  padding: 0 150px;
   &__main {
     font-weight: 400;
     font-size: 50px;
