--- a/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.html
+++ b/apps/ux-films-finder/src/app/components/person-spouses/person-spouses.component.html
@@ -1,5 +1,5 @@
 <div class="person-spouses">
-  <div class="person-spouses__spouses" *ngIf="spouses?.length !== 0">
+  <div class="person-spouses__spouses">
     <div class="person-spouses__title">Отношения</div>
     <ng-container *ngFor="let spousesItem of spouses">
       <div class="person-spouses__relation">
