--- a/apps/ux-films-finder/src/app/components/footer/footer.component.html
+++ b/apps/ux-films-finder/src/app/components/footer/footer.component.html
@@ -1,64 +1,66 @@
 <footer class="footer">
-  <div class="footer__navigation">
-    <div class="footer__navigation-block">
-      <a routerLink="/search-films" class="footer__link">Фильмы</a>
-      <a routerLink="/cartoon" class="footer__link">Мультфильмы</a>
-      <a routerLink="/anime" class="footer__link">Аниме</a>
-      <a routerLink="/for-children" class="footer__link">Детские программы</a>
+  <div class="footer__wrapper center-content">
+    <div class="footer__navigation">
+      <div class="footer__navigation-block">
+        <a routerLink="/search-films" class="footer__link">Фильмы</a>
+        <a routerLink="/cartoon" class="footer__link">Мультфильмы</a>
+        <a routerLink="/anime" class="footer__link">Аниме</a>
+        <a routerLink="/for-children" class="footer__link">Детские программы</a>
+      </div>
+      <div class="footer__navigation-block">
+        <a routerLink="/action" class="footer__link">Боевики</a>
+        <a routerLink="/comedy" class="footer__link">Комедии</a>
+        <a routerLink="/fantasy" class="footer__link">Фэнтези</a>
+        <a routerLink="/thriller" class="footer__link">Триллеры</a>
+      </div>
+      <div class="footer__navigation-block">
+        <a routerLink="/news" class="footer__link">Новости</a>
+        <a routerLink="/family" class="footer__link">Для всей семьи</a>
+        <a routerLink="/live" class="footer__link">Live TV</a>
+        <a routerLink="/show" class="footer__link">Телешоу</a>
+      </div>
+      <div class="footer__navigation-block">
+        <a routerLink="/adventure" class="footer__link">Приключения</a>
+        <a routerLink="/drama" class="footer__link">Драма</a>
+        <a routerLink="/romance" class="footer__link">Мелодрама</a>
+        <a routerLink="/horror" class="footer__link">Хоррор</a>
+      </div>
     </div>
-    <div class="footer__navigation-block">
-      <a routerLink="/action" class="footer__link">Боевики</a>
-      <a routerLink="/comedy" class="footer__link">Комедии</a>
-      <a routerLink="/fantasy" class="footer__link">Фэнтези</a>
-      <a routerLink="/thriller" class="footer__link">Триллеры</a>
-    </div>
-    <div class="footer__navigation-block">
-      <a routerLink="/news" class="footer__link">Новости</a>
-      <a routerLink="/family" class="footer__link">Для всей семьи</a>
-      <a routerLink="/live" class="footer__link">Live TV</a>
-      <a routerLink="/show" class="footer__link">Телешоу</a>
-    </div>
-    <div class="footer__navigation-block">
-      <a routerLink="/adventure" class="footer__link">Приключения</a>
-      <a routerLink="/drama" class="footer__link">Драма</a>
-      <a routerLink="/romance" class="footer__link">Мелодрама</a>
-      <a routerLink="/horror" class="footer__link">Хоррор</a>
-    </div>
-  </div>
-  <div class="footer__credits">
-    <p class="footer__copyright-credits">
-      Copyright &copy; 2022 OnlineCinema.com All rights reserved
-    </p>
-    <p class="footer__copyright-credits">
-      Terms Privacy CA Privacy Copyright Cookies
-    </p>
+    <div class="footer__credits">
+      <p class="footer__copyright-credits">
+        Copyright &copy; 2022 OnlineCinema.com All rights reserved
+      </p>
+      <p class="footer__copyright-credits">
+        Terms Privacy CA Privacy Copyright Cookies
+      </p>
 
-    <div class="footer__media-icons">
-      <svg class="footer__svg-icon" viewBox="0 0 548 548">
-        <path
-          d="M448 64H64C29 64 0 93 0 128v256c0 35 29 64 64 64h384c35 0 64-29 64-64V128c0-35-29-64-64-64zM343 235l135-116 2 9v256l-1 6-136-155zM448 96l6 1-198 170L58 97l6-1h384zM33 390l-1-6V128l2-9 135 116L33 390zm31 26-9-2 139-158 52 44a16 16 0 0 0 20 0l52-44 139 158-9 2H64z"
-        />
-      </svg>
-      <svg class="footer__svg-icon" viewBox="0 0 548 548">
-        <path
-          d="m545 400-1-3c-10-17-28-38-55-63l-1-1v-1c-13-11-20-19-23-23-6-8-8-15-4-23 2-6 10-18 25-37l19-25c33-43 47-71 43-84l-2-3c-1-1-4-3-9-4-5-2-11-2-18-1l-82 1h-6l-4 1h-1l-1 1-4 3-2 5a466 466 0 0 1-65 114l-11 10c-3 3-6 4-8 3l-4-1-7-7c-1-3-3-7-3-11a123 123 0 0 1-1-25 424 424 0 0 0 1-36 4097 4097 0 0 1 0-49l-3-9-6-7-10-4c-10-2-23-3-38-3-36-1-58 2-68 7l-11 8c-4 4-4 7-2 7 12 2 20 6 25 12l1 4a133 133 0 0 1 7 34 222 222 0 0 1-7 72l-3 6-2 2-7 1c-3 0-6-1-10-4l-12-11-14-19-16-30-4-8a712 712 0 0 1-25-53c-2-4-4-7-7-9l-1-1-5-3-6-2-79 1c-8 0-13 2-16 5l-1 2-1 5 2 7a942 942 0 0 0 130 216l8 7 20 16c9 7 18 13 29 19a160 160 0 0 0 79 20h33c7-1 12-3 15-6l1-2 3-5 1-8c-1-8 0-15 1-22l5-15a36 36 0 0 1 11-12l3-1c4-2 10 0 16 4 6 5 12 10 17 17a507 507 0 0 0 40 40l5 3c4 3 9 5 15 7s12 2 16 1l73-1c8 0 13-1 17-4 4-2 7-5 7-7v-10l-2-8z"
-        />
-      </svg>
-      <svg class="footer__svg-icon" viewBox="0 0 128 128">
-        <path fill="none" d="M0 0h128v128H0z" />
-        <path
-          d="M68 128H7c-4 0-7-3-7-7V7c0-4 3-7 7-7h114c4 0 7 3 7 7v114c0 4-3 7-7 7H88V78h17l2-19H88V47c0-6 2-10 10-10h10V20l-15-1c-15 0-25 9-25 26v14H52v19h16v50z"
-          clip-rule="evenodd"
-        />
-      </svg>
-      <svg class="footer__svg-icon" viewBox="0 0 128 128">
-        <g clip-rule="evenodd">
+      <div class="footer__media-icons">
+        <svg class="footer__svg-icon" viewBox="0 0 548 548">
+          <path
+            d="M448 64H64C29 64 0 93 0 128v256c0 35 29 64 64 64h384c35 0 64-29 64-64V128c0-35-29-64-64-64zM343 235l135-116 2 9v256l-1 6-136-155zM448 96l6 1-198 170L58 97l6-1h384zM33 390l-1-6V128l2-9 135 116L33 390zm31 26-9-2 139-158 52 44a16 16 0 0 0 20 0l52-44 139 158-9 2H64z"
+          />
+        </svg>
+        <svg class="footer__svg-icon" viewBox="0 0 548 548">
+          <path
+            d="m545 400-1-3c-10-17-28-38-55-63l-1-1v-1c-13-11-20-19-23-23-6-8-8-15-4-23 2-6 10-18 25-37l19-25c33-43 47-71 43-84l-2-3c-1-1-4-3-9-4-5-2-11-2-18-1l-82 1h-6l-4 1h-1l-1 1-4 3-2 5a466 466 0 0 1-65 114l-11 10c-3 3-6 4-8 3l-4-1-7-7c-1-3-3-7-3-11a123 123 0 0 1-1-25 424 424 0 0 0 1-36 4097 4097 0 0 1 0-49l-3-9-6-7-10-4c-10-2-23-3-38-3-36-1-58 2-68 7l-11 8c-4 4-4 7-2 7 12 2 20 6 25 12l1 4a133 133 0 0 1 7 34 222 222 0 0 1-7 72l-3 6-2 2-7 1c-3 0-6-1-10-4l-12-11-14-19-16-30-4-8a712 712 0 0 1-25-53c-2-4-4-7-7-9l-1-1-5-3-6-2-79 1c-8 0-13 2-16 5l-1 2-1 5 2 7a942 942 0 0 0 130 216l8 7 20 16c9 7 18 13 29 19a160 160 0 0 0 79 20h33c7-1 12-3 15-6l1-2 3-5 1-8c-1-8 0-15 1-22l5-15a36 36 0 0 1 11-12l3-1c4-2 10 0 16 4 6 5 12 10 17 17a507 507 0 0 0 40 40l5 3c4 3 9 5 15 7s12 2 16 1l73-1c8 0 13-1 17-4 4-2 7-5 7-7v-10l-2-8z"
+          />
+        </svg>
+        <svg class="footer__svg-icon" viewBox="0 0 128 128">
           <path fill="none" d="M0 0h128v128H0z" />
           <path
-            d="m128 23-15 5c5-4 10-9 11-15-5 3-10 5-16 6-5-5-12-8-19-8a27 27 0 0 0-26 33C41 43 22 32 9 16a27 27 0 0 0 8 36L5 48v1c0 13 9 23 21 26a25 25 0 0 1-12 0c4 11 13 19 25 19a52 52 0 0 1-39 11 75 75 0 0 0 115-64v-4c5-4 9-8 13-14"
+            d="M68 128H7c-4 0-7-3-7-7V7c0-4 3-7 7-7h114c4 0 7 3 7 7v114c0 4-3 7-7 7H88V78h17l2-19H88V47c0-6 2-10 10-10h10V20l-15-1c-15 0-25 9-25 26v14H52v19h16v50z"
+            clip-rule="evenodd"
           />
-        </g>
-      </svg>
+        </svg>
+        <svg class="footer__svg-icon" viewBox="0 0 128 128">
+          <g clip-rule="evenodd">
+            <path fill="none" d="M0 0h128v128H0z" />
+            <path
+              d="m128 23-15 5c5-4 10-9 11-15-5 3-10 5-16 6-5-5-12-8-19-8a27 27 0 0 0-26 33C41 43 22 32 9 16a27 27 0 0 0 8 36L5 48v1c0 13 9 23 21 26a25 25 0 0 1-12 0c4 11 13 19 25 19a52 52 0 0 1-39 11 75 75 0 0 0 115-64v-4c5-4 9-8 13-14"
+            />
+          </g>
+        </svg>
+      </div>
     </div>
   </div>
 </footer>
