--- a/apps/ux-films-finder/src/app/components/person-films/person-films.component.html
+++ b/apps/ux-films-finder/src/app/components/person-films/person-films.component.html
@@ -1,26 +1,23 @@
-<div class="person-film">
-  <div class="person-film__title">Фильмы</div>
-  <ng-container *ngFor="let filmsItem of films"
-    ><div class="person-film__films">
-      <div class="person-film__rating-name">
-        <div
-          class="person-film__rating"
-          *ngIf="filmsItem.rating; else emptyTemplate"
-        >
-          {{ filmsItem.rating }}
+<div class="person-films">
+  <div class="person-films__title">Фильмы</div>
+  <ng-container *ngFor="let film of films">
+    <div class="person-films__film">
+      <div class="person-films__rating">
+        <div class="person-films__rating-number">
+          {{ film.rating }}
         </div>
-        <ng-template #emptyTemplate>
-          <div class="person-film__rating-empty"></div>
-        </ng-template>
-        <a
-          class="person-film__film-link"
-          routerLink="/details/{{ filmsItem.filmId }}"
-          >{{ filmsItem.nameRu || filmsItem.nameEn }}
-        </a>
       </div>
-      <div class="person-film__profession-key">
-        {{ professions[filmsItem.professionKey] }}
+
+      <a
+        class="person-films__film-link"
+        routerLink="/details/{{ film.filmId }}"
+      >
+        {{ film.nameRu || film.nameEn }}
+      </a>
+
+      <div class="person-films__profession-key">
+        {{ professions[film.professionKey] }}
       </div>
-    </div></ng-container
-  >
+    </div>
+  </ng-container>
 </div>
