--- a/apps/ux-films-finder/src/app/components/person-films/person-films.component.less
+++ b/apps/ux-films-finder/src/app/components/person-films/person-films.component.less
@@ -1,5 +1,5 @@
 @import '../../../assets/styles/themes/base/common/shared';
-.person-film {
+.person-films {
   &__rating-name {
     display: flex;
     justify-content: start;
@@ -7,23 +7,20 @@
     margin-top: 8px;
   }
 
-  &__rating-empty {
-    width: 71px;
-    height: 32px;
+  &__rating-number {
+    background: @color-gray-0E;
+    display: flex;
+    justify-content: center;
+    border-radius: 16px;
+    padding: 0px 32px;
   }
-
   &__rating {
     width: 55px;
     height: 32px;
-    background: @color-gray-0E;
-    border-radius: 16px;
-    display: flex;
-    justify-content: center;
-    margin-right: 16px;
   }
-  &__films {
+  &__film {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 75px 700px 100px;
     margin-bottom: 32px;
     white-space: nowrap;
   }
