--- a/apps/ux-films-finder/src/app/components/video/video.component.html
+++ b/apps/ux-films-finder/src/app/components/video/video.component.html
@@ -1,15 +1,17 @@
-<div class="player-wrapper">
-  <div *ngFor="let videoItem of videos$ | async | slice: 0:1">
-    <h3>{{ videoItem.name }}</h3>
+<div class="video">
+  <div
+    class="video__wrap"
+    *ngFor="let videoItem of videos$ | async | slice: 0:1"
+  >
     <iframe
+      class="video__player"
       width="1560"
       height="815"
-      *ngIf="!!link; else showNotFound"
+      *ngIf="!!link"
       [src]="link"
       title="YouTube video player"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
     ></iframe>
-    <ng-template #showNotFound> Трейлер не найден </ng-template>
   </div>
 </div>
