--- a/apps/ux-films-finder/src/app/components/details/details.component.html
+++ b/apps/ux-films-finder/src/app/components/details/details.component.html
@@ -88,6 +88,7 @@
       </div>
     </div>
     <ff-screen-gallery [filmId]="filmInfo.kinopoiskId"> </ff-screen-gallery>
+    <ff-similar-films [filmId]="filmInfo.kinopoiskId"></ff-similar-films>
     <ff-reviews [filmId]="filmInfo.kinopoiskId"></ff-reviews>
   </ng-container>
 </div>
