new title-films-list.component

--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="film-banner__genres">
           <ng-container *ngFor="let genre of film.genres">
-            <ff-genre-label [genres]="genre.genre"></ff-genre-label>
+            <ff-genre-label [genre]="genre.genre"></ff-genre-label>
           </ng-container>
         </div>
       </div>
