--- a/apps/ux-films-finder/src/app/components/category/category.component.html
+++ b/apps/ux-films-finder/src/app/components/category/category.component.html
@@ -1,4 +1,4 @@
-<ff-title-films-list></ff-title-films-list>
+<ff-title-films-list [genre]="genre"></ff-title-films-list>
 <div class="category">
   <ff-loader *ngIf="loading"></ff-loader>
 
