--- a/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.less
+++ b/apps/ux-films-finder/src/app/components/title-films-list/title-films-list.component.less
@@ -16,12 +16,14 @@
       transform: rotate(0.5turn);
     }
   }
-  &__genres {
+  &__title {
+    text-transform: capitalize;
     font-size: 42px;
     display: flex;
     align-items: center;
     color: #ffffff;
   }
+
   &._comedy {
     background-color: @color-genre-comedy;
   }
