--- a/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
+++ b/apps/ux-films-finder/src/app/components/genre-label/genre-label.component.html
@@ -1,3 +1,3 @@
-<div class="genre-label" [ngClass]="'_' + genres">
-  {{ genres }}
+<div class="genre-label" [ngClass]="'_' + genreEng">
+  {{ genre }}
 </div>
