new title-films-list.component

--- a/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/genres-banner/genres-banner.component.html
@@ -7,8 +7,11 @@
   </div>
 
   <div class="genres-banner__slider keen-slider" #sliderRef>
-    <a routerLink="/comedy" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _comedy keen-slider__slide">
+    <a
+      routerLink="/comedy"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _comedy">
         <div class="genres-banner__slide-link-genre _comedy">
           <div class="genres-banner__slide-link-genre-title">Комедии</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -16,8 +19,11 @@
       </div>
     </a>
 
-    <a routerLink="/horror" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _horror keen-slider__slide">
+    <a
+      routerLink="/horror"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _horror">
         <div class="genres-banner__slide-link-genre _horror">
           <div class="genres-banner__slide-link-genre-title">Ужасы</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -25,8 +31,11 @@
       </div>
     </a>
 
-    <a routerLink="/action" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _action keen-slider__slide">
+    <a
+      routerLink="/action"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _action">
         <div class="genres-banner__slide-link-genre _action">
           <div class="genres-banner__slide-link-genre-title">Боевик</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -34,8 +43,8 @@
       </div>
     </a>
 
-    <a routerLink="/drama" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _drama keen-slider__slide">
+    <a routerLink="/drama" class="genres-banner__slide-link keen-slider__slide">
+      <div class="genres-banner__slide _drama">
         <div class="genres-banner__slide-link-genre _drama">
           <div class="genres-banner__slide-link-genre-title">Драма</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -43,8 +52,11 @@
       </div>
     </a>
 
-    <a routerLink="/adventure" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _adventure keen-slider__slide">
+    <a
+      routerLink="/adventure"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _adventure">
         <div class="genres-banner__slide-link-genre _adventure">
           <div class="genres-banner__slide-link-genre-title">Приключение</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -53,7 +65,7 @@
     </a>
 
     <a routerLink="/fantasy" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _fantasy keen-slider__slide">
+      <div class="genres-banner__slide _fantasy">
         <div class="genres-banner__slide-link-genre _fantasy">
           <div class="genres-banner__slide-link-genre-title">Фэнтэзи</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -61,8 +73,11 @@
       </div>
     </a>
 
-    <a routerLink="/thriller" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _thriller keen-slider__slide">
+    <a
+      routerLink="/thriller"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _thriller">
         <div class="genres-banner__slide-link-genre _thriller">
           <div class="genres-banner__slide-link-genre-title">Триллер</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -70,8 +85,11 @@
       </div>
     </a>
 
-    <a routerLink="/romance" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _romance keen-slider__slide">
+    <a
+      routerLink="/romance"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _romance">
         <div class="genres-banner__slide-link-genre _romance">
           <div class="genres-banner__slide-link-genre-title">Мелодрама</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
@@ -79,8 +97,11 @@
       </div>
     </a>
 
-    <a routerLink="/family" class="genres-banner__slide-link">
-      <div class="genres-banner__slide _family keen-slider__slide">
+    <a
+      routerLink="/family"
+      class="genres-banner__slide-link keen-slider__slide"
+    >
+      <div class="genres-banner__slide _family">
         <div class="genres-banner__slide-link-genre _family">
           <div class="genres-banner__slide-link-genre-title">Семейный</div>
           <div class="genres-banner__slide-link-genre-triangles"></div>
