--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -17,13 +17,18 @@
           </ng-container>
         </div>
       </div>
-      <div class="film-banner__poster">
-        <img
-          class="film-banner__poster-image"
-          src="{{ film?.posterUrl }}"
-          alt="Постер"
-        />
-      </div>
+      <a
+        class="film-banner__film-link"
+        routerLink="/details/{{ film.kinopoiskId }}"
+      >
+        <div class="film-banner__poster">
+          <img
+            class="film-banner__poster-image"
+            src="{{ film?.posterUrl }}"
+            alt="Постер"
+          />
+        </div>
+      </a>
       <div class="film-banner__description">
         <div *ngIf="film.rating" class="film-banner__description-row">
           <div class="film-banner__description-title">Рейтинг</div>
