new film-banner.component

--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.html
@@ -17,10 +17,7 @@
           </ng-container>
         </div>
       </div>
-      <a
-        class="film-banner__film-link"
-        routerLink="/details/{{ film.kinopoiskId }}"
-      >
+      <a class="film-banner__film-link" routerLink="/details/{{ film.filmId }}">
         <div class="film-banner__poster">
           <img
             class="film-banner__poster-image"
